set body styles, fixes missing padding

--- a/tutor/resources/styles/components/task-step/all-steps.scss
+++ b/tutor/resources/styles/components/task-step/all-steps.scss
@@ -9,6 +9,7 @@
   .interactive-content,
   .reading-content {
     @include tutor-book-content();
+    @include tutor-book-content-body();
 
     .splash {
       margin-top: -20px;
